# NumericMethods

./: .gitignore  CMakeLists.txt  README.md  linear_with_gradient.txt  linear_with_single_color.txt  test.txt
BandMatrix/: CMakeLists.txt
BandMatrix/include/: BandMatrix.h  ReorderMatrix.h
BandMatrix/src/: BandMatrix.cpp  ReorderMatrix.cpp  main.cpp
BandMatrix/test/: BandMatrixTest.cpp  BandMatrixTest.h  ReorderTest.cpp  ReorderTest.h  main.cpp
BorderRules/: CMakeLists.txt
BorderRules/include/: BorderRules.h
BorderRules/src/: BorderRules.cpp
GUI/: CMakeLists.txt  NumericalMethods.pro  frag.glsl  heatequationsolver.cpp  heatequationsolver.h  mainwindow.cpp  openglwidget.h  test.txt  vert.glsl
GUI/include/: camera.h  heatequationsolver.h  heatequationsolvergldata.h  mainwindow.h
GUI/res/: test.txt  test1.txt  test2.txt  test3.txt  test4.txt
GUI/src/: boundingbox.cpp  boundingbox.h  camera.cpp  heatequationsolver.cpp  heatequationsolver.h  heatequationsolvergldata.cpp  heatequationsolvergldata.h  main.cpp  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h
Gauss/: CMakeLists.txt
Gauss/include/: gausssolver.h
Gauss/src/: gausssolver.cpp
Gauss/test/: .gitignore  CMakeLists.txt  tst_gausstests.cpp  tst_gausstests.h
HeatConductivityMatrix/: CMakeLists.txt
HeatConductivityMatrix/include/: HeatMatrix.h  Point.h
HeatConductivityMatrix/src/: HeatMatrix.cpp  Point.cpp
HeatConductivityMatrix/test/: HeatTest.cpp  HeatTest.h  main.cpp
HeatEquationSolver/: CMakeLists.txt
HeatEquationSolver/include/: heatequationsolver.h
HeatEquationSolver/src/: heatequationsolver.cpp
HeatEquationSolver/test/: SolverTest.cpp  SolverTest.h  main.cpp
common/: CMakeLists.txt
common/include/: common.h
common/src/: common.cpp
docs/: main.tex
docs/inc/: 0-titul.tex  preamble.tex
parser/: CMakeLists.txt
parser/include/: parser.h
parser/src/: parser.cpp
parser/test/: ParserTest.cpp  ParserTest.h  main.cpp
